--- a/allstar.yaml
+++ b/allstar.yaml
@@ -4,3 +4,4 @@ optConfig:
   # optOutRepos:
   # - repo-name-one
   # - repo-name-two
+issueFooter: Allstar has been installed on all Google managed GitHub orgs. Policies are gradually being rolled out and enforced by the GOSST and OSPO teams. Learn more at http://go/allstar-github
