--- a/binary_artifacts.yaml
+++ b/binary_artifacts.yaml
@@ -1,5 +1,6 @@
 optConfig:
   optOutStrategy: true
+  optOutArchivedRepos: true
   # Uncomment and change the repo-name if you wish to remove a repo from allstar checks
   # optOutRepos:
   # - repo-name-one
